拆分Saver